--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
       </ul>
       <div class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="http://getslash.readthedocs.org"><i class="fa fa-book"></i> Documentation</a></li>
+          <li><a href="http://slash.readthedocs.org"><i class="fa fa-book"></i> Documentation</a></li>
           <li><a href="http://github.com/getslash"><i class="fa fa-github"></i> Slash@GitHub</a></li>
         </ul>
       </div>
