--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -45,7 +45,11 @@ body {
     padding-top: 100px;
 
     h1 {
-	font-size: 550%;	
+	font-size: 550%;
+
+	&.smaller {
+	    font-size: 450%;
+	}
     }
 
 
