--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -74,6 +74,14 @@ body {
     }
 }
 
+.header.main.scotty {
+    background-image: url('../../img/scotty-bg.jpg');
+
+    small {
+	color: white;
+    }
+}
+
 
 
 #latest-news {
