--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 
   <div class="container text-center">
     <p class="text-muted">
-      Copyright &copy; 2014, 2015, 2016 - Slash Developers and Contributors
+      Copyright &copy; 2014, 2015, 2016, 2017, 2018 - Slash Developers and Contributors
     </p>
   </div>
 </footer>
